syntax = "proto3";

package blog;

// Public blog service for read operations
service BlogService {
  rpc GetBlogPosts(GetBlogPostsRequest) returns (GetBlogPostsResponse);
  rpc GetBlogPost(GetBlogPostRequest) returns (GetBlogPostResponse);
}

// Protected blog admin service for write operations (requires authentication)
service BlogAdminService {
  rpc CreateBlogPost(CreateBlogPostRequest) returns (CreateBlogPostResponse);
  rpc UpdateBlogPost(UpdateBlogPostRequest) returns (UpdateBlogPostResponse);
  rpc DeleteBlogPost(DeleteBlogPostRequest) returns (DeleteBlogPostResponse);
  rpc RestoreBlogPost(RestoreBlogPostRequest) returns (RestoreBlogPostResponse);
}

message GetBlogPostsRequest {
  enum Sort {
    RELEVANCE = 0;
    CREATED_ASC = 1;
    CREATED_DESC = 2;
    UPDATED_ASC = 3;
    UPDATED_DESC = 4;
  }

  optional string query = 1;
  int32 limit = 2;
  int32 offset = 3;
  Sort sort = 4;
}

message GetBlogPostsResponse {
  repeated BlogPostSummary posts = 1;
  int32 total = 2;
}

message BlogPostSummary {
  int64 id = 1;
  string title = 2;
  string description = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message GetBlogPostRequest {
  int64 id = 1;
}

message GetBlogPostResponse {
  BlogPost post = 1;
}

message BlogPost {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string body = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message CreateBlogPostRequest {
  string title = 1;
  string description = 2;
  string body = 3;
}

message CreateBlogPostResponse {
  int64 id = 1;
}

message UpdateBlogPostRequest {
  int64 id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string body = 4;
}

message UpdateBlogPostResponse {}

message DeleteBlogPostRequest {
  int64 id = 1;
}

message DeleteBlogPostResponse {}

message RestoreBlogPostRequest {
  int64 id = 1;
}

message RestoreBlogPostResponse {}
